--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@stripe/stripe-js": "^8.3.0",
     "dotenv": "^17.2.3",
     "dwolla-v2": "^3.4.0",
-    "next": "14.2.0",
+    "next": "^16.0.7",
     "plaid": "^39.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-plaid-link": "^3.5.0",
     "stripe": "^19.2.0"
   },
